config-root/namespaces/jx-staging/springboot-example-project/springboot-example-project-springboot-example-project-deploy.yaml
# Source: springboot-example-project/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-example-project-springboot-example-project
  labels:
    draft: draft-app
    chart: "springboot-example-project-0.3.0"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'springboot-example-project'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: springboot-example-project-springboot-example-project
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: springboot-example-project-springboot-example-project
    spec:
      serviceAccountName: springboot-example-project-springboot-example-project
      containers:
        - name: springboot-example-project
          image: "ghcr.io/keskad/springboot-example-project:0.3.0"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
